2008-03-14 Removed an apparently unnecessary call to 
           FigureCanvasAgg.draw in backend_qt*agg. Thanks to Ted 
           Drain - DSD 

2008-03-10 Workaround a bug in backend_qt4agg's blitting due to a
           buffer width/bbox width mismatch in _backend_agg's
           copy_from_bbox - DSD

2008-02-29 Fix class Wx toolbar pan and zoom functions (Thanks Jeff
           Peery) - MGD

2008-02-16 Added some new rec array functionality to mlab
           (rec_summarize, rec2txt and rec_groupby).  See
           examples/rec_groupby_demo.py.  Thanks to Tim M for rec2txt.

2008-02-12 Applied Erik Tollerud's span selector patch - JDH

2008-02-11 Update plotting() doc string to refer to getp/setp. - JKS

2008-02-10 Fixed a problem with square roots in the pdf backend with
           usetex. - JKS

2008-02-08 Fixed minor __str__ bugs so getp(gca()) works. - JKS

2008-02-05 Added getters for title, xlabel, ylabel, as requested
           by Brandon Kieth - EF

2008-02-05 Applied Gael's ginput patch and created
           examples/ginput_demo.py - JDH

2008-02-03 Expose interpnames, a list of valid interpolation
           methods, as an AxesImage class attribute. - EF

2008-02-03 Added BoundaryNorm, with examples in colorbar_only.py
           and image_masked.py. - EF

2008-02-03 Force dpi=72 in pdf backend to fix picture size bug. - JKS

2008-02-01 Fix doubly-included font problem in Postscript backend - MGD

2008-02-01 Fix reference leak in ft2font Glyph objects. - MGD

2008-01-31 Don't use unicode strings with usetex by default - DSD

2008-01-31 Fix text spacing problems in PDF backend with *some* fonts,
           such as STIXGeneral.

2008-01-31 Fix \sqrt with radical number (broken by making [ and ]
           work below) - MGD

2008-01-27 Applied  Martin Teichmann's patch to improve the Qt4
           backend. Uses Qt's builtin toolbars and statusbars.
           See bug 1828848 - DSD

2008-01-10 Moved toolkits to mpl_toolkits, made mpl_toolkits