@@ -1,6 +1,6 @@
 # use masked arrays to plot a line with different colors by y-value
-import matplotlib.numerix.npyma as ma
 from numpy import logical_or, arange, sin, pi
+from numpy import ma
 from matplotlib.pyplot import  plot, show
 
 t = arange(0.0, 2.0, 0.01)
