@@ -1,6 +1,13 @@
-2008-03-14 Removed an apparently unnecessary call to 
-           FigureCanvasAgg.draw in backend_qt*agg. Thanks to Ted 
-           Drain - DSD 
+2008-03-19 Changed ma import statements to "from numpy import ma";
+           this should work with past and future versions of
+           numpy, whereas "import numpy.ma as ma" will work only
+           with numpy >= 1.05, and "import numerix.npyma as ma"
+           is obsolete now that maskedarray is replacing the
+           earlier implementation, as of numpy 1.05.
+
+2008-03-14 Removed an apparently unnecessary call to
+           FigureCanvasAgg.draw in backend_qt*agg. Thanks to Ted
+           Drain - DSD
 
 2008-03-10 Workaround a bug in backend_qt4agg's blitting due to a
            buffer width/bbox width mismatch in _backend_agg's
